Remove unused packages;

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@user/file-system-access",
+  "name": "@NEXIVIL/file-system-access",
   "version": "0.1.0",
   "private": false,
   "description": "",
@@ -9,8 +9,7 @@
   ],
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "7.18",
-    "@design-express/node-scripts": "^1.1.9",
-    "file-system-access": "^1.0.4"
+    "@design-express/node-scripts": "^1.1.9"
   },
   "scripts": {
     "start": "node-scripts start",
