--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@NEXIVIL/file-system-access",
+  "name": "@NEXIVIL/File-System",
   "version": "0.1.0",
   "private": false,
   "description": "",
